# sas-client

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  SECURITY.md  pyproject.toml  pyproject_snippet.txt
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  test.yml
examples/: quickstart.py
src/sas_client/: __init__.py  auth.py  cli.py  client.py  exceptions.py  models.py  public.py
tests/: test_client_unit.py
