[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sas-client"
version = "0.2.0"
description = "Python client and CLI for SAS - Symbiotic Autoprotection System."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later + Durante Invariance License" }
authors = [
  { name = "Gonzalo Emir Durante", email = "duranteg2@gmail.com" }
]
maintainers = [
  { name = "Gonzalo Emir Durante", email = "duranteg2@gmail.com" }
]
keywords = ["SAS", "Symbiotic Autoprotection System", "hallucination detection", "generative AI", "semantic audit", "kappaD", "coherence"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Environment :: Console",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Leesintheblindmonk1999/SAS"
Repository = "https://github.com/Leesintheblindmonk1999/sas-client"
Documentation = "https://sas-api.onrender.com/docs"
API = "https://sas-api.onrender.com"
Landing = "https://leesintheblindmonk1999.github.io/sas-landing/"
Zenodo = "https://doi.org/10.5281/zenodo.19702379"

[project.scripts]
sas = "sas_client.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "build>=1.2", "twine>=5.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/sas_client"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
